<resources>
    <string name="app_name" translatable="false">IND MAKAK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">IND MAKAK</string>
    <string name="nav_header_subtitle" translatable="false">ericg7346@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <!-- BARRA DE OPCIONES -->
    <string name="action_settings">Configuración</string>
    <!-- PÁGINA PRINCIPAL / HOME FRAGMENT -->
    <string name="Marca_C">Marca de tu coche: Volkswagen</string>
    <string name="Modelo_C">Modelo de tu coche: Jetta</string>
    <string name="Año_C">Año de tu coche: 2008</string>
    <string name="btn_1">Lugares Disponibles</string>
    <string name="Placas_C">Placas de tu coche: VMW-739</string>
    <string name="btn_2">R e s e v a r</string>
    <!-- MENÚ -->
    <string name="menu_contact">Contacto</string>
    <string name="menu_home" translatable="false">IND MAKAK</string>
    <string name="menu_gallery">Lugares Disponibles</string>
    <string name="menu_slideshow">Ayuda</string>
    <!-- SEGUNDA PÁGINA / GALLERY FRAGMENT -->
    <string name="Lugar_d">Lista de lugares:</string>
    <string name="lugar_a1" translatable="false">A1</string>
    <string name="lugar_a2" translatable="false">A2</string>
    <string name="lugar_a3" translatable="false">A3</string>
    <string name="lugar_b1" translatable="false">B1</string>
    <string name="lugar_b2" translatable="false">B2</string>
    <string name="lugar_b3" translatable="false">B3</string>
    <string name="lugar_c1" translatable="false">C1</string>
    <string name="lugar_c2" translatable="false">C2</string>
    <string name="lugar_c3" translatable="false">C3</string>
    <string name="lugar_d1" translatable="false">D1</string>
    <string name="lugar_d2" translatable="false">D2</string>
    <string name="lugar_d3" translatable="false">D3</string>
    <string name="btn_l" translatable="false">Reservar</string>
    <string name="btn_atras">Regresar</string>
    <!-- Lugar A1 -->
    <string name="frag_lugar_a1">Lugar: A1</string>
    <!-- Lugar A2-->
    <string name="frag_lugar_a2">Lugar: A2 </string>
    <!-- Lugar A3-->
    <string name="frag_lugar_a3">Lugar: A3</string>
    <!-- Lugar B1-->
    <string name="frag_lugar_b1">Lugar: B1</string>
    <!-- Lugar B2-->
    <string name="frag_lugar_b2">Lugar: B2</string>
    <!-- Lugar B3 -->
    <string name="frag_lugar_b3">Lugar: B3</string>
    <!-- Lugar C1 -->
    <string name="frag_lugar_c1">Lugar: C1</string>
    <!-- Lugar C2 -->
    <string name="frag_lugar_c2">Lugar: C2</string>
    <!-- Lugar C3 -->
    <string name="frag_lugar_c3">Lugar: C3</string>
    <!-- Lugar D1-->
    <string name="frag_lugar_d1">Lugar: D1</string>
    <!-- Lugar D1-->
    <string name="frag_lugar_d2">Lugar: D2</string>
    <!-- Lugar D1-->
    <string name="frag_lugar_d3">Lugar: D3</string>
    <!-- Fragmentos "Lugar" Hint-->
    <string name="frag_lugar_glob_hint_nom">Nombre:</string>
    <string name="frag_lugar_glob_hint_correo">Correo Electronico:</string>
    <string name="frag_lugar_glob_hint_NoServPub">No. Servidor Publico:</string>
    <!-- Fragmentos "Lugar" btn-->
    <string name="frag_lugar_glob_btn_regis">Registrar</string>
    <string name="frag_lugar_glob_btn_regre">Regresar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Fragmento Ayuda-->
    <string name="textAyuda">Ayuda</string>
    <string name="obtenerAyuda">Obtener Ayuda</string>
</resources>