<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reservas.FragmentLugarB3">

    <TextView
        android:id="@+id/frag_text_lugar_b3"
        android:layout_width="268dp"
        android:layout_height="45dp"
        android:text="@string/frag_lugar_b3"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        tools:ignore="TextSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_text_frag_b1_Nom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_edit_frag_b3_Nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frag_lugar_glob_hint_nom"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/input_text_edit_frag_b3_Correo"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/frag_lugar_glob_hint_correo"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/input_numb_frag_b3_NoServPub"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/frag_lugar_glob_hint_NoServPub"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <Button
        android:id="@+id/button_frag_lugar_b3_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_lugar_glob_btn_regis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_frag_lugar_b3_regre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_lugar_glob_btn_regre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>