<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home2"
        android:layout_width="156dp"
        android:layout_height="42dp"
        android:text="@string/Modelo_C"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/text_home"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="133dp"
        android:layout_height="42dp"
        android:text="@string/Placas_C"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/text_home3"
        app:layout_constraintTop_toBottomOf="@+id/text_home3"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:text="@string/Marca_C"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/text_home3"
        android:layout_width="132dp"
        android:layout_height="39dp"
        android:text="@string/Año_C"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/text_home2"
        app:layout_constraintTop_toBottomOf="@+id/text_home2"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView_home2"
        android:layout_width="190dp"
        android:layout_height="117dp"
        android:src="@mipmap/jetta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        tools:ignore="ContentDescription,MissingConstraints" />

    <Button
        android:id="@+id/buttonHome1"
        android:layout_width="173dp"
        android:layout_height="89dp"
        android:text="@string/btn_1"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView_home3"
        android:layout_width="180dp"
        android:layout_height="147dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/estacionamiento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <Button
        android:id="@+id/buttonHome2"
        android:layout_width="367dp"
        android:layout_height="60dp"
        android:text="@string/btn_2"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView_home4"
        android:layout_width="355dp"
        android:layout_height="181dp"
        android:background="@color/black"
        android:src="@mipmap/reserva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>