<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/textLugar13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lugar_d"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <LinearLayout
        android:layout_width="@dimen/linear_layout_vertical_width"
        android:layout_height="@dimen/linear_layout_vertical_heigth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212">

        <TextView
            android:id="@+id/textLugar5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_b2"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLugar5"
            android:layout_width="@dimen/button_l"
            android:layout_height="wrap_content"
            android:text="@string/btn_l"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/linear_layout_vertical_width"
        android:layout_height="@dimen/linear_layout_vertical_heigth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333">

        <TextView
            android:id="@+id/textLugar8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_c2"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLugar8"
            android:layout_width="@dimen/button_l"
            android:layout_height="wrap_content"
            android:text="@string/btn_l"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/linear_layout_vertical_width"
        android:layout_height="@dimen/linear_layout_vertical_heigth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09">

        <TextView
            android:id="@+id/textLugar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_a2"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLugar2"
            android:layout_width="@dimen/button_l"
            android:layout_height="wrap_content"
            android:text="@string/btn_l"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/linear_layout_vertical_width"
        android:layout_height="@dimen/linear_layout_vertical_heigth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09">

        <TextView
            android:id="@+id/textLugar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_a3"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLugar3"
            android:layout_width="@dimen/button_l"
            android:layout_height="wrap_content"
            android:text="@string/btn_l"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/linear_layout_vertical_width"
        android:layout_height="@dimen/linear_layout_vertical_heigth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454">

        <TextView
            android:id="@+id/textLugar11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_d2"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLugar11"
            android:layout_width="@dimen/button_l"
            android:layout_height="wrap_content"
            android:text="@string/btn_l"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/linear_layout_vertical_width"
        android:layout_height="@dimen/linear_layout_vertical_heigth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09">

        <TextView
            android:id="@+id/textLugar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_a1"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLugar1"
            android:layout_width="@dimen/button_l"
            android:layout_height="wrap_content"
            android:text="@string/btn_l"
            android:textSize="12sp"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/linear_layout_vertical_width"
        android:layout_height="@dimen/linear_layout_vertical_heigth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333">

        <TextView
            android:id="@+id/textLugar7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_c1"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLugar7"
            android:layout_width="@dimen/button_l"
            android:layout_height="wrap_content"
            android:text="@string/btn_l"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/linear_layout_vertical_width"
        android:layout_height="@dimen/linear_layout_vertical_heigth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333">

        <TextView
            android:id="@+id/textLugar9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_c3"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLugar9"
            android:layout_width="@dimen/button_l"
            android:layout_height="wrap_content"
            android:text="@string/btn_l"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/linear_layout_vertical_width"
        android:layout_height="@dimen/linear_layout_vertical_heigth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212">

        <TextView
            android:id="@+id/textLugar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_b1"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLugar4"
            android:layout_width="@dimen/button_l"
            android:layout_height="wrap_content"
            android:text="@string/btn_l"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/linear_layout_vertical_width"
        android:layout_height="@dimen/linear_layout_vertical_heigth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454">

        <TextView
            android:id="@+id/textLugar12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_d3"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLugar12"
            android:layout_width="@dimen/button_l"
            android:layout_height="wrap_content"
            android:text="@string/btn_l"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/linear_layout_vertical_width"
        android:layout_height="@dimen/linear_layout_vertical_heigth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454">

        <TextView
            android:id="@+id/textLugar10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_d1"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLugar10"
            android:layout_width="@dimen/button_l"
            android:layout_height="wrap_content"
            android:text="@string/btn_l"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/linear_layout_vertical_width"
        android:layout_height="@dimen/linear_layout_vertical_heigth"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212">

        <TextView
            android:id="@+id/textLugar6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar_b3"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLugar6"
            android:layout_width="@dimen/button_l"
            android:layout_height="wrap_content"
            android:text="@string/btn_l"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonLugar13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>